# WasmEdge-WASINN-examples

./: .gitignore  README.md  build_mobilenet_base.sh
.github/scripts/: build.sh  build_example.sh  test_rust.sh
.github/workflows/: build-openvino.yaml  build-pytorch.yaml  build.yaml  build_openvino.yml  build_openvino_mobilenet.yml  build_openvino_road_seg_adas.yml  build_pytorch_yolo.yml  chatTTS.yml  llama.yml  main.yaml  piper.yml  pytorch.yml  tflite.yml
assets/: mobilenet-base-example.wasm
examples/mobilenet_image/: .gitignore  README.md  download_mobilenet.sh
mobilenet/: download_mobilenet.sh
mobilenet/rust/: Cargo.toml
openvino-mobilenet-image/: .gitignore  README.md  download_mobilenet.sh  wasmedge-wasinn-example-mobilenet-image.wasm
openvino-mobilenet-image/rust/: Cargo.toml
openvino-mobilenet-image/rust/src/: main.rs
openvino-mobilenet-raw/: .gitignore  README.md  wasmedge-wasinn-example-mobilenet.wasm
openvino-mobilenet-raw/rust/: Cargo.toml
openvino-road-segmentation-adas/: README.md  visualize_inference_result.ipynb
openvino-road-segmentation-adas/openvino-road-seg-adas/: Cargo.toml
openvino-road-segmentation-adas/openvino-road-seg-adas/src/: main.rs
openvino-road-segmentation-adas/rust/: README.md  visualize_inference_result.ipynb
openvino-road-segmentation-adas/rust/image-preprocessor/: Cargo.toml
openvino-road-segmentation-adas/rust/image-preprocessor/src/: main.rs
openvino-road-segmentation-adas/rust/openvino-road-seg-adas/: Cargo.toml  README.md
openvino-road-segmentation-adas/rust/openvino-road-seg-adas/src/: main.rs
openvinogenai-raw/: README.md
openvinogenai-raw/rust/: Cargo.toml
pytorch-mobilenet-image/: README.md  download_data.sh  download_mobilenet.sh  gen_tensor.py  wasmedge-wasinn-example-mobilenet-image.wasm
pytorch-mobilenet-image/fixtures/: generate_mobilenet.py  test_mobilenet.py
pytorch-mobilenet-image/rust/: Cargo.toml
pytorch-mobilenet-image/rust/src/: main.rs  named_model.rs
pytorch-resnet18-image/: README.md  gen_resnet18_aoti.py  gen_resnet18_model.py  image-1x3x224x224.rgb  run.py  wasmedge-wasinn-example-mobilenet-image.wasm  wasmedge-wasinn-example-resnet18-image-named-model.wasm
pytorch-yolo-image/: README.md  get_model.py
pytorch-yolo-image/rust/: Cargo.toml
pytorch-yolo-image/rust/src/: main.rs  yolo_classes.rs
rust/: Cargo.toml  README.md
rust/examples/mobilenet-base/: Cargo.toml
rust/examples/mobilenet-base/src/: main.rs
rust/src/: generated.rs
scripts/: build_wasmedge.sh  download_libtorch.sh  download_mobilenet.sh  install_libtorch.sh  install_openvino.sh  install_rust_wasm32.sh
tf-mobilenet-image/: README.md  birdX224X224X3.rgb  wasmedge-wasinn-example-tf-mobilenet-image.wasm
tflite-birds_v1-image/: README.md  birdx224x224x3.rgb  download_data.sh  wasmedge-wasinn-example-tflite-bird-image.wasm
tflite-birds_v1-image/rust/: Cargo.toml
tflite-birds_v1-image/rust/image-converter/: Cargo.toml
tflite-birds_v1-image/rust/image-converter/src/: main.rs
tflite-birds_v1-image/rust/tflite-bird/: Cargo.toml
tflite-birds_v1-image/rust/tflite-bird/src/: main.rs
tflite-birds_v1-image/src/: main.rs
wasmedge-burn/squeezenet/: Dockerfile  README.md  wasmedge-wasinn-example-squeezenet.wasm
wasmedge-burn/squeezenet/rust/: Cargo.toml
wasmedge-burn/squeezenet/rust/src/: main.rs
wasmedge-burn/whisper/: Dockerfile  README.md  wasmedge-wasinn-example-whisper.wasm
wasmedge-chatTTS/: .gitignore  Cargo.toml  README.md  wasmedge-chattts.wasm
wasmedge-chatTTS/assets/: demo.webm
wasmedge-chatTTS/config/: decoder.yaml  dvae.yaml  gpt.yaml  path.yaml  vocos.yaml
wasmedge-chatTTS/src/: main.rs
wasmedge-ggml/: README.md
wasmedge-ggml-belle-chat/: Cargo.toml  README.md  wasmedge-ggml-belle-chat.wasm
wasmedge-ggml-codellama/: Cargo.toml  README.md  wasmedge-ggml-codellama.wasm
wasmedge-ggml-llama/: Cargo.toml  README.md  wasmedge-ggml-llama.wasm
wasmedge-ggml-llama-embedding/: README.md  wasmedge-ggml-llama-embedding.wasm
wasmedge-ggml-llama-embedding/src/: main.rs
wasmedge-ggml-llama-interactive/: Cargo.toml  README.md  wasmedge-ggml-llama-interactive.wasm
wasmedge-ggml-llama-interactive-stream/: Cargo.toml  README.md  wasmedge-ggml-llama-interactive-stream.wasm
wasmedge-ggml-llama-interactive-stream/src/: main.rs
wasmedge-ggml-llama-interactive/src/: main.rs
wasmedge-ggml-llama/src/: main.rs
wasmedge-ggml/basic/: Cargo.toml  README.md  wasmedge-ggml-basic.wasm
wasmedge-ggml/chatml/: Cargo.toml  README.md  wasmedge-ggml-chatml.wasm
wasmedge-ggml/command-r/: Cargo.toml  README.md  wasmedge-ggml-command-r.wasm
wasmedge-ggml/embedding/: Cargo.toml  README.md  wasmedge-ggml-llama-embedding.wasm
wasmedge-ggml/gemma/: Cargo.toml  README.md  wasmedge-ggml-gemma.wasm
wasmedge-ggml/gemma-3/: Cargo.toml  README.md  wasmedge-ggml-gemma-3-base64.wasm  wasmedge-ggml-gemma-3.wasm
wasmedge-ggml/gemma-4/: Cargo.toml  README.md  wasmedge-ggml-gemma-4.wasm
wasmedge-ggml/grammar/: Cargo.toml  README.md  wasmedge-ggml-grammar.wasm
wasmedge-ggml/json-schema/: Cargo.toml  README.md  wasmedge-ggml-json-schema.wasm
wasmedge-ggml/llama/: Cargo.toml  Dockerfile  README.md  wasmedge-ggml-llama.wasm
wasmedge-ggml/llama-stream/: Cargo.toml  README.md  wasmedge-ggml-llama-stream.wasm
wasmedge-ggml/llava/: Cargo.toml  README.md  (+1 more)
wasmedge-ggml/llava-base64-stream/: Cargo.toml  README.md  wasmedge-ggml-llava-base64-stream.wasm
wasmedge-mlx/: Cargo.toml  README.md
wasmedge-neuralspeed/: Cargo.toml  README.md
wasmedge-neuralspeed/src/: main.rs
wasmedge-piper/: Cargo.toml  README.md  config.schema.json  dependencies.d2  json_input.schema.json
wasmedge-tf-llama/: README.md
wasmedge-tf-llama/rust/: Cargo.toml
wasmedge-tf-llama/rust/src/: main.rs
wasmedge-tf-mobilenet_v2/: README.md  wasmedge-tf-example-mobilenet.wasm
wasmedge-tf-mtcnn/: README.md  wasmedge-tf-example-mtcnn.wasm
wasmedge-tf-mtcnn/rust/: Cargo.toml
wasmedge-tf-mtcnn/rust/src/: main.rs
wasms/: mobilenet-base-example.wasm
whisper-basic/: Cargo.toml  whisper-basic.wasm
(+88 files in other folders)
