[package]
name = "wasmedge-neural-speed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizers =  { version = "0.19.1", features = ["unstable_wasm"], default-features = false }
serde_json = "1.0"
wasmedge-wasi-nn = "0.7.1"
