[package]
name = "wasmedge-wasinn-example-mobilenet"
version = "0.19.0"
authors = ["Second-State"]
readme = "README.md"
edition = "2018"
publish = false

[dependencies]
wasi-nn = { version = "0.1.0" }

# This crate is built with the wasm32-wasi target, so it's separate
# from the main Wasmtime build, so use this directive to exclude it
# from the parent directory's workspace.
[workspace]
