[package]
authors = ["Sam Liu <sam@secondstate.io>"]
edition = "2021"
name = "openvino-road-seg-adas"
version = "0.2.0"

[dependencies]
wasi-nn = "0.4.0"
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
