[package]
name = "wasmedge-tf-example-mtcnn"
version = "0.1.0"
authors = ["Second-State"]
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
wasmedge_tensorflow_interface = "0.3.0"
image = { version = "0.23.0", default-features = false, features = ["jpeg", "png", "gif"] }
imageproc = "0.21.0"

[workspace]
