[package]
authors = ["Sam Liu <sam@secondstate.io>"]
edition = "2021"
name = "im2tensor"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
opencv = {version = "0.63", features = ["clang-runtime"]}
structopt = "0.3.26"
thiserror = "1.0.31"
