[package]
authors = ["Sam Liu <sam@secondstate.io>"]
edition = "2021"
name = "openvino-road-seg-adas"
version = "0.1.0"

[dependencies]
image = {version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
wasmedge-nn = "0.3"
