[package]
name = "wasmedge-wasinn-example-tflite-bird-image"
version = "0.1.0"
authors = ["Second-State"]
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
wasi-nn = { version = "0.3.0" }

[workspace]
